# Mini-Clinic-Data-Reconciliation

./: .config  .gitmodules  CMakeLists.txt  README.md  config.yaml  prebuild.lua
include/: llm_api.h  log.h  pch.h  serializer.h  webserver.h
include/routes/: routes.h
resources/html/: debug.html  index.html  login.html  reconcile.html  scripts.js  styles.css
resources/html/reconcile/: medication.html
src/: llm_api.cpp  log.cpp  main.cpp  serializer.cpp  webhost.cpp  webserver.cpp
src/routes/: routes.cpp
test/Data_Validation/: UnitTest.txt
test/Medication_Reconciler/: UnitTests.txt
